crates/cli/tests/snapshots/ca__ca_status_reports_local_and_system_trust_without_creating_files.snap
---
source: crates/cli/tests/ca.rs
expression: "(missing, current, current_on_terminal, unreadable)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "CA trust status\nLocal CA files: missing\n  certificate: <tempdir>/home/.pv/certificates/ca.pem\n  private key: <tempdir>/home/.pv/certificates/ca-key.pem\nSystem keychain trust: unknown\n  local CA is unavailable\n",
        stderr: "",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "CA trust status\nLocal CA files: current\n  certificate: <tempdir>/home/.pv/certificates/ca.pem\n  private key: <tempdir>/home/.pv/certificates/ca-key.pem\n  common name: PV Local Development CA\n  fingerprint: <fingerprint>\nSystem keychain trust: current\n  fingerprint: <fingerprint>\n",
        stderr: "",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "[pv] ca:status\n────────────────────────────────────────────────────────────────────────────────\n✓  Local CA files: current\n   certificate:\n   <tempdir>/home/.pv/certificates/ca.pem\n   private key:\n   <tempdir>/home/.pv/certificates/ca-key.pem\n   common name: PV Local Development CA\n   fingerprint: <fingerprint>\n✓  System keychain trust: current\n   fingerprint: <fingerprint>\n",
        stderr: "",
    },
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "CA trust status\nLocal CA files: current\n  certificate: <tempdir>/home/.pv/certificates/ca.pem\n  private key: <tempdir>/home/.pv/certificates/ca-key.pem\n  common name: PV Local Development CA\n  fingerprint: <fingerprint>\nSystem keychain trust: unreadable\n  macOS keychain inspection failed: fixture keychain failure\n",
        stderr: "",
    },
)
