crates/cli/tests/snapshots/ca__ca_trust_generates_local_ca_and_defers_system_keychain_trust.snap
---
source: crates/cli/tests/ca.rs
expression: "(output, paths.ca_certificate(), paths.ca_private_key())"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                1,
            ),
        ),
        stdout: "Prepared PV local CA\n  certificate: <tempdir>/home/.pv/certificates/ca.pem\n  private key: <tempdir>/home/.pv/certificates/ca-key.pem\n  fingerprint: <fingerprint>\nSystem keychain trust: not trusted\n  fingerprint: <fingerprint>\nPrivileged trust installation deferred to PR 13 setup/system-integration work.\n",
        stderr: "",
    },
    "<tempdir>/home/.pv/certificates/ca.pem",
    "<tempdir>/home/.pv/certificates/ca-key.pem",
)
