crates/cli/tests/snapshots/ca__ca_trust_generates_local_ca_and_trusts_system_keychain.snap
---
source: crates/cli/tests/ca.rs
expression: "(output, paths.ca_certificate(), paths.ca_private_key(),\nenvironment.operations.borrow().clone(),)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Prepared PV local CA\n  certificate: <tempdir>/home/.pv/certificates/ca.pem\n  private key: <tempdir>/home/.pv/certificates/ca-key.pem\n  fingerprint: <fingerprint>\nSystem keychain trust: not trusted\n  fingerprint: <fingerprint>\nTrusted PV local CA in the System keychain.\n",
        stderr: "",
    },
    "<tempdir>/home/.pv/certificates/ca.pem",
    "<tempdir>/home/.pv/certificates/ca-key.pem",
    [
        "trust <fingerprint>",
    ],
)
