crates/cli/tests/snapshots/ca__ca_untrust_leaves_local_ca_files_and_removes_system_keychain_trust.snap
---
source: crates/cli/tests/ca.rs
expression: "(output, environment.operations.borrow().clone())"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "Prepared PV local CA trust removal\nLocal CA files: current\n  certificate: <tempdir>/home/.pv/certificates/ca.pem\n  private key: <tempdir>/home/.pv/certificates/ca-key.pem\n  common name: PV Local Development CA\n  fingerprint: <fingerprint>\nSystem keychain trust: current\n  fingerprint: <fingerprint>\nRemoved PV local CA trust from the System keychain.\n",
        stderr: "",
    },
    [
        "untrust <fingerprint>",
    ],
)
