crates/cli/tests/snapshots/ca__ca_untrust_on_a_terminal_reports_local_ca_state.snap
---
source: crates/cli/tests/ca.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "✓  Prepared PV local CA trust removal\n✓  Local CA files: current\n   certificate: <tempdir>/home/.pv/certificates/ca.pem\n   private key: <tempdir>/home/.pv/certificates/ca-key.pem\n   common name: PV Local Development CA\n   fingerprint: <fingerprint>\n✓  System keychain trust: current\n   fingerprint: <fingerprint>\n✓  Removed trust for PV’s local HTTPS certificate\n",
    stderr: "",
}
