crates/cli/tests/snapshots/ca__ca_untrust_succeeds_when_system_trust_is_absent_and_preserves_local_ca_files.snap
---
source: crates/cli/tests/ca.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "Prepared PV local CA trust removal\nLocal CA files: current\n  certificate: <tempdir>/home/.pv/certificates/ca.pem\n  private key: <tempdir>/home/.pv/certificates/ca-key.pem\n  common name: PV Local Development CA\n  fingerprint: <fingerprint>\nSystem keychain trust: not trusted\n  fingerprint: <fingerprint>\nSystem keychain trust is already absent.\n",
    stderr: "",
}
